Added image just need to do some minor formatting

--- a/eecs-thesis-template-main/thesis/sections/00_front_matter/00_cover.tex
+++ b/eecs-thesis-template-main/thesis/sections/00_front_matter/00_cover.tex
@@ -13,7 +13,7 @@
 		\large School of Electrical Engineering and Computer Science,\\\smallskip
         \large University of Queensland\\
         \vfill
-		\large Submitted for the degree of Bachelor of Science (Honours)\\\smallskip
+		\large Submitted for the degree of Bachelor of Engineering (Honours)\\\smallskip
         \large in the division of Electrical Engineering
         \vfill
 		\large \thesisduedate
