--- a/eecs-thesis-template-main/thesis/sections/00_front_matter/01_letter.tex
+++ b/eecs-thesis-template-main/thesis/sections/00_front_matter/01_letter.tex
@@ -17,7 +17,7 @@ St Lucia, Queensland 4072\\\bigskip
 \noindent
 Dear Professor Bruenig,\\
 
-In accordance with the requirements of the degree of Bachelor of Science (Honours) in the School of Electrical Engineering and Computer Science, I present the following thesis entitled
+In accordance with the requirements of the degree of Bachelor of Engineering (Honours) in the School of Electrical Engineering and Computer Science, I present the following thesis entitled
 
 \begin{center}
 `\titletext'
