--- a/eecs-thesis-template-main/thesis/sections/00_front_matter/02_acknowledgements.tex
+++ b/eecs-thesis-template-main/thesis/sections/00_front_matter/02_acknowledgements.tex
@@ -11,9 +11,5 @@
 
 \chapter*{Acknowledgements \label{sec:acknowledgements}}
 \addcontentsline{toc}{chapter}{Acknowledgements}
-\todo[inline]{Acknowledgements: recognise those who have been instrumental in the completion of the project.
-Acknowledgements should include any professional editorial advice received including the name of
-the editor and a brief description of the service rendered.}
 
-
-SUPERVISOR, FRIENDS, ETC....
+A big thanks to my supervisor, Dr. Konstanty Bialkowski, for his guidance and support throughout the project. I am very appreciative for the time you spent helping me understand the project and for your patience in answering my questions, I gained a lot of knowledge from the experience.
