Final edits and ready for submission

--- a/eecs-thesis-template-main/common/references/references.bib
+++ b/eecs-thesis-template-main/common/references/references.bib
@@ -486,12 +486,15 @@
 @INPROCEEDINGS{ZhangClutter,
   author = {Lu Zhang and Konstanty S. Bialkowski},
   title = {Passive Radar for Low Doppler Targets Detection using Background Estimation and Subtraction},
-  booktitle = {2020 IEEE International Conference on Radar (RADAR)},
-  year = {2020},
+  booktitle = {2019 IEEE Asia-Pacific Microwave Conference (APMC)},
+  year = {2019},
   pages = {1--6},
   publisher = {IEEE},
-  address = {Brisbane, QLD, Australia},
-  doi = {10.1109/RADAR49081.2020.9231322},
+  address = {Singapore},
+  month = {Dec},
+  note = {Date of Conference: 10--13 December 2019. Added to IEEE Xplore: 19 March 2020},
+  doi = {10.1109/APMC46564.2019.9038490},
+  isbn = {978-1-7281-2630-1}
 }
 
 @misc{RPiCase,
