--- a/eecs-thesis-template-main/thesis/sections/01_body/00_introduction.tex
+++ b/eecs-thesis-template-main/thesis/sections/01_body/00_introduction.tex
@@ -26,15 +26,15 @@ This thesis focuses on the development of a hardware testbed based on software d
     \item The development of a passive radar detection system using existing digital broadcast signals as illuminators of opportunity,
     \item The design of a small scale, modular, low cost system using single board computer hardware, specically with simple user buttons to commence and cease data collection and processing, and 
     \item The verification of the passive radar detection system performance and latency in a controlled environment agains higher cost PC hardware.
-    \item Exploring the potential for scaling up the system to a multistatic, remote RX system through a network.
+    \item Exploring the potential for scaling up the system to a multistatic, remote RX system through different networking options.
 \end{itemize}
 
 \noindent
-Given that passive radar based detection is a broad topic with much academic progress and commercial technological development, this thesis will not aim to cover the broad subject area. Consequently, the following topics are out of scope for this project:
+Given that passive radar based detection is a broad topic with much academic progress and commercial technological development, this thesis will not aim to cover the broad subject area. Consequently, some extension areas such as low latency implementation, multi-illuminator systems and object classification will not be covered in this thesis.
 
-\begin{itemize}
-    \item The development of a complete bistatic passive radar detection system optimized for low latency, and object classification,
-    \item The development of a full multistatic passive radar detection system, whereby angle of approach and precise location of a target can be determined, and
-    \item The development of a passive radar detection system using non-digital broadcast signals as illuminators of opportunity.
-    \item The modification and development of digital signal processing / detection algorithms optimized for latency and customised hardware applications.
-\end{itemize}
+% \begin{itemize}
+%     \item The development of a complete bistatic passive radar detection system optimized for low latency, and object classification,
+%     \item The development of a full multistatic passive radar detection system, whereby angle of approach and precise location of a target can be determined, and
+%     \item The development of a passive radar detection system using non-digital broadcast signals as illuminators of opportunity.
+%     \item The modification and development of digital signal processing / detection algorithms optimized for latency and customised hardware applications.
+% \end{itemize}
