--- a/eecs-thesis-template-main/thesis/sections/01_body/01_background.tex
+++ b/eecs-thesis-template-main/thesis/sections/01_body/01_background.tex
@@ -275,7 +275,7 @@ Given that single channel configurations are vulnerable to noise, interference a
 \end{figure}
 
 
-\noindent Logically, the process above relfects the most computationally intensive step of the project ... hence, considerations with regard to signal processing algorithms will need to be taken in order to keep the overall detection system low cost, despite it not being a major factor of the testbed creation itself. 
+\noindent Logically, the process above relfects the most computationally intensive step of the project hence, considerations with regard to signal processing algorithms will need to be taken in order to keep the overall detection system low cost, despite it not being a major factor of the testbed creation itself. 
 
 
 \section{IoT Architecture}
