--- a/eecs-thesis-template-main/thesis/sections/01_body/02_litreview.tex
+++ b/eecs-thesis-template-main/thesis/sections/01_body/02_litreview.tex
@@ -57,3 +57,6 @@ Commercial industry has been developing passive radar for a number of years now,
 \end{figure}
 
 Since the release of Silent Sentry in 1998, there have been a number of other releases from different countries, each utilising a combination of different illuminators. Notably, these systems include BAE Systems CELLDAR (UK), Thales Homelander Alerter (France), and Silentium Defence Maverick (Australia). 
+
+\vspace{0.5cm}
+In summary, the literature review has highlighted proof of concept, theory of illuminators and existing commercial technology. Importantly, this commercial technology comes with a large price tag, physical size and relatively large barriers to entry in terms of technical know-how. Moreover, the high end commercial systems are geared toward military grade tracking and detection. This thesis will aim to bridge the gap between demonstrated proof of concept and relatively simple theory to provide a low cost, user friendly testbed for passive radar detection. Subsequently enabling both hobbyist access and lower cost research and development in the field.
